// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processor components Editor renders with props 1`] = `
<div
  className={undefined}
>
  <div />
  <div>
    Type: 
    <span
      className="processor-type"
    >
      email
    </span>
  </div>
</div>
`;

exports[`Processor components OpenEditorButton renders with label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Open!
  </span>
</button>
`;

exports[`Processor components OpenEditorButton renders with out the non-required props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Edit Settings
  </span>
</button>
`;

exports[`Processor components Remove Processor Button Renders with label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    R2
  </span>
</button>
`;

exports[`Processor components Remove Processor Button Renders without label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Remove Processor
  </span>
</button>
`;

exports[`Using RenderGroup RenderGroup snapshot 1`] = `
<div
  className=""
>
  <div
    className="caldera-config-group"
  >
    <label
      htmlFor="cf-something-select-id"
    >
      Content type
    </label>
    <input
      aria-describedby="cf-something-select-id-description"
      className="field-config"
      id="cf-something-select-id"
      onChange={[Function]}
      required={false}
      type="text"
      value="html"
    />
    <p
      className="description"
      id="cf-something-select-id-description"
    >
      Choose content type, default is HTML
    </p>
  </div>
</div>
`;
